menambahkan tampilan daftar mobil dan kofigurasinya di recyle view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="primary_blue">#1A66FF</color>
     <color name="hint_gray">#A0A0A0</color>
     <color name="parseColo">#135bec </color>
+    <color name="biru_kucai"> #2563EB</color>
 </resources>
