--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -9,6 +9,7 @@
     android:padding="16dp">
 
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -18,7 +19,7 @@
             android:id="@+id/ivUser"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_placeholder" />
+            android:src="@drawable/ic_user_placeholder" />
 
         <LinearLayout
             android:layout_width="0dp"
