--- a/app/src/main/res/layout/fragment_ubah_sandi.xml
+++ b/app/src/main/res/layout/fragment_ubah_sandi.xml
@@ -133,7 +133,7 @@
                 android:layout_height="55dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/bg_button_primary"
-                android:drawableEnd="@drawable/ic_sync"
+                android:drawableEnd="@drawable/icon_sync"
                 android:paddingEnd="16dp"
                 android:text="Perbarui Kata Sandi"
                 android:textAllCaps="false"
