--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,9 +25,26 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">55dp</item>
         <item name="android:background">@drawable/bg_input_field</item>
-        <item name="android:paddingHorizontal">16dp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="FilterButtonActive">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">38dp</item>
+        <item name="android:background">@drawable/bg_filter_active</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="FilterButtonInactive">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">38dp</item>
+        <item name="android:background">@drawable/bg_filter_inactive</item>
+        <item name="android:textColor">#344054</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">13sp</item>
     </style>
 </resources>
 
