--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,6 +46,10 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">13sp</item>
     </style>
+
+        <style name="CircleImage">
+            <item name="cornerSize">50%</item>
+        </style>
 </resources>
 
 
