--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,6 +50,31 @@
         <style name="CircleImage">
             <item name="cornerSize">50%</item>
         </style>
+
+
+        <style name="LabelStyle">
+            <item name="android:layout_width">match_parent</item>
+            <item name="android:layout_height">wrap_content</item>
+            <item name="android:textColor">#444444</item>
+            <item name="android:textSize">14sp</item>
+            <item name="android:layout_marginBottom">8dp</item>
+            <item name="android:layout_marginTop">16dp</item>
+        </style>
+
+        <style name="FieldStyle">
+            <item name="android:layout_width">match_parent</item>
+            <item name="android:layout_height">wrap_content</item>
+            <item name="android:background">@drawable/bg_input_field</item>
+            <item name="android:padding">16dp</item>
+            <item name="android:drawablePadding">12dp</item>
+            <item name="android:textColorHint">#000000</item>
+            <item name="android:textSize">16sp</item>
+        </style>
+
+        <style name="CirImage">
+            <item name="cornerSize">50%</item>
+        </style>
+
 </resources>
 
 
