--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/"
+            android:src="@drawable/por"
             android:contentDescription="Sports car driving on coastal road"/>
     </androidx.cardview.widget.CardView>
 
