--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_back_arrow"
+        android:src="@drawable/ic_arrow_back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -19,7 +19,7 @@
         android:id="@+id/btnHelp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_help_circle"
+        android:src="@drawable/ic_help"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -90,7 +90,7 @@
         android:layout_marginTop="8dp"
         android:inputType="textPassword"
         android:drawableStart="@drawable/ic_lock"
-        android:drawableEnd="@drawable/ic_eye_off"
+        android:drawableEnd="@drawable/ic_eye_of"
         android:drawablePadding="12dp"
         app:layout_constraintTop_toBottomOf="@id/lblPassword" />
 
