--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -113,8 +113,10 @@
         app:layout_constraintTop_toBottomOf="@id/etPassword">
 
         <CheckBox
+            android:id="@+id/cbTerms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
 
         <TextView
             android:layout_width="wrap_content"
