--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:background="@drawable/gradient_background"
-                android:src="@drawable/blue_car"
+                android:src="@drawable/por"
                 android:contentDescription="Premium car image"/>
 
             <!-- Verified Badge -->
