--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
         android:paddingHorizontal="16dp"
         android:layout_marginTop="8dp"
         android:inputType="textEmailAddress"
-        android:drawableStart="@drawable/ic_mail"
+        android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
         app:layout_constraintTop_toBottomOf="@id/lblEmail" />
 
