--- a/app/src/main/res/layout/booking_fragment.xml
+++ b/app/src/main/res/layout/booking_fragment.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerInside"
-            android:src="@drawable/Porsche" />
+            android:src="@drawable/por" />
 
         <RelativeLayout
             android:layout_width="match_parent"
