--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -29,7 +29,7 @@
                 android:text="Jakarta, Indonesia"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
-                android:drawableStart="@drawable/ic_location"
+                android:drawableStart="@drawable/ic_location_gray"
                 android:drawablePadding="6dp" />
             <ImageView
                 android:layout_alignParentEnd="true"
