--- a/app/src/main/res/layout/item_profil_user.xml
+++ b/app/src/main/res/layout/item_profil_user.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,21 +15,19 @@
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_bottom_toBottomOf="parent" />
-
-    <TextView
-        android:id="@+id/menuTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Judul Menu"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/ivChevron"
-        app:layout_constraintStart_toEndOf="@id/menuIcon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/menuStatus"/>
+        app:layout_constraintBottom_toBottomOf="parent" /> <TextView
+    android:id="@+id/menuTitle"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:text="Judul Menu"
+    android:textColor="#000000"
+    android:textSize="16sp"
+    android:textStyle="bold"
+    app:layout_constraintEnd_toStartOf="@+id/ivChevron"
+    app:layout_constraintStart_toEndOf="@id/menuIcon"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/menuStatus"/>
 
     <TextView
         android:id="@+id/menuStatus"
@@ -40,16 +39,14 @@
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/menuTitle"
         app:layout_constraintTop_toBottomOf="@id/menuTitle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <ImageView
-        android:id="@+id/ivChevron"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/ic_chevron_right"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_bottom_toBottomOf="parent"
-        app:tint="#CCCCCC" />
+        app:layout_constraintBottom_toBottomOf="parent"/> <ImageView
+    android:id="@+id/ivChevron"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:src="@drawable/ic_chevron_right"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:tint="#CCCCCC" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
