--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -61,6 +61,7 @@
                 android:layout_marginStart="12dp"
                 android:background="@drawable/bg_button_blue"
                 android:src="@drawable/ic_filter"
+                android:contentDescription="Filter pencarian"
                 app:tint="@android:color/white" />
         </LinearLayout>
 
